# multipoles

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
docs/: index.md  reference.md  theory.md  usage.md
examples/: multipole-moments-accuracy.ipynb
multipoles/: __init__.py  expansion.py
reference/: index.html
tests/: test_accuracy.py  test_expansion.py
theory/: index.html
usage/: index.html
